--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.7'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
